# PicRes

./: BeforeRelease.hpp  CMakeLists.txt  Changelog.txt  DlgErrorList.cpp  DlgErrorList.hpp  DlgErrorLit.cpp  DlgHelp.cpp  DlgHelp.hpp  DlgHelp.ui  Docs.qrc  DropThread.cpp  DropThread.hpp  Dropbox.cpp  Dropbox.hpp  Global.hpp  History  History.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PicRes.pro  Readme.txt  ResizeThread.cpp  ResizeThread.hpp  TableItem.cpp  TableItem.hpp  Todo  Todo.txt  main.cpp
Core/: DropThread.cpp  DropThread.hpp  ResizeThread.cpp  ResizeThread.hpp
Docs/: Changelog.txt  Readme.txt  Todo.txt
Resources/: Icon.qrc  Icon.rc
UI/: DlgErrorList.cpp  DlgErrorList.hpp  DlgErrorList.ui  DlgHelp.cpp  DlgHelp.hpp  Dropbox.cpp  Dropbox.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  TableItem.cpp  TableItem.hpp
